# openapi2mcp

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  bump_version.sh  get_pet_findByStatus.ts  get_pet_find_by_status.ts  http_client.ts  index.js  package-lock.json  package.json  post_v3_images_fill_async.ts
.claude/: settings.local.json
.github/: CODEOWNERS  README.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  labeler.yml  pr-validation.yml  publish.yml  release.yml
.wash/: config.json  config.yaml
examples/: README.md  ecommerce-api.yaml  github-api.yaml  petstore.yaml  simple-api.json  slack-api.yaml
patches/: @bytecodealliance+preview2-shim+0.17.9.patch
scripts/: test-e2e.sh
src/: cli.rs  client.rs  error.rs  lib.rs  main.rs  mcp.rs  openapi.rs  template.rs  template_features.rs  template_files.rs  wash_plugin.rs
src/backend/: mod.rs  native.rs
src/codegen_typescript/: mod.rs
src/mcp_server/: converter.rs  mod.rs
src/shell/: mod.rs  native.rs  wasm.rs
src/wasm/: mod.rs  plugin.rs
tests/: integration_tests.rs  tests.rs
tests/adobe-firefly/: input.json
tests/experian-businesses/: openapi.yaml
tests/experian-delphi/: openapi.yaml
tests/fixtures/: README.md
tests/us-federal-reserve-fred/: input.yaml
tests/weather-api/: input.yaml
tests/weather-gov/: input.yaml
tests/zoom/: input.json
wit/: world.wit
