[package]
name = "openapi2mcp"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
convert_case = "0.8.0"
http = "1.3.1"
log = "0.4.28"
openapiv3 = "2.2.0"
serde_json = "1.0.143"
serde_yaml = "0.9.34"

[target.'cfg(all(target_os = "wasi", target_env = "p2"))'.dependencies]
wit-bindgen = "0.45"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
