[package]
name = "openapi2mcp"
version = "0.9.0"
edition = "2024"
# Starting with Rust 1.94 std::fs makes use of the wasi:fs mutate-directory flag. The jco shims don't support mutate-directory yet (see https://github.com/bytecodealliance/jco/pull/1303)
# In the meantime, pin to 1.93
rust-version = "1.93.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
convert_case = "0.8.0"
http = "1.3.1"
log = "0.4.28"
openapiv3 = "2.2.0"
regex = "1.12.2"
serde_json = "1.0.143"
serde_yaml = "0.9.34"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
