[package]
name = "openapi2mcp"
version = "0.10.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
convert_case = "0.8.0"
http = "1.4.1"
log = "0.4.30"
openapiv3 = "2.2.0"
regex = "1.12.3"
serde_json = "1.0.150"
serde_yaml = "0.9.34"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
